[tool.poetry]
name = "carfinder"
version = "0.0.1"
description = "Search vehicle inventory from multiple manufacturers."
authors = ["Major Hayden <fmajor@mhtx.net>"]
repository = "https://github.com/major/carfinder"
documentation = "https://major.github.io/carfinder/"
readme = "README.md"
packages = [
  {include = "carfinder"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
fake-useragent = "^1.1.3"
gql = {extras = ["requests"], version = "^3.4.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
deptry = "^0.12.0"
mypy = "^1.4.1"
pre-commit = "^3.3.3"
tox = "^4.6.4"
pandas-stubs = "^2.0.2.230605"
types-requests = "^2.31.0.1"
vcrpy = "^5.0.0"
pytest-vcr = "^1.0.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.18"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.mypy]
files = ["carfinder"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["carfinder"]


